# rust-http3-cloudflare-test-tool

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo_simple.toml  HTTP3_TEST_USAGE.md  README.en.md  README.md  README_HTTP3.md  Rust HTTP 3 Cloudflare 测试工具-CLAUDE.md  Rust HTTP 3 Cloudflare 测试工具-readme.md  config.json  connectivity_results.json  extract_hosts.go  failed-test-report-2025-12-01T03-12-18-592Z.json  failed-test-report-2025-12-01T03-12-18-592Z.md  failed-test-report-2025-12-01T05-59-15-158Z.json  failed-test-report-2025-12-01T05-59-15-158Z.md  generate-test-report.js  go.mod  go.sum  host_connectivity_check.go  hosts.json  http3_config.json  ipv6-test-config.json  main.go  package.json  pnpm-lock.yaml  test_hosts.json  上游节点-workers.txt  你漏了一件事情!https___xget.a1u06h9fe9y5bozbmgz3.qzz.io_....md  再扩充一点能力,这个网址可以通过http3访问,可以测试到cloudflare的http3连接能力....md  帮我介绍一下 https___github.com_cloudflare_quiche_  现在r....md  帮我输出一个完整版本的main.rs.md  建议不要用正则表达式,使用dns的二进制消息格式解析,比较靠谱! 试试这个 https___xge....md  这个程序还有些没做完的,因为是通过优选域名去解析成ip地址,访问cloudflare的测试,但是还....md
cmd/: main.go
hickory-dns-main/: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  OLD-CHANGELOG.md  README.md  SECURITY.md
hickory-dns-main/.github/: dependabot.yml
hickory-dns-main/.github/ISSUE_TEMPLATE/: bug_report.md  question.md
hickory-dns-main/.github/workflows/: publish.yml  test.yml
hickory-dns-main/conformance/: README.md
hickory-dns-main/conformance/e2e-tests/: README.md
hickory-dns-main/conformance/ede-dot-com/: README.md
hickory-dns-main/crates/client/: README.md
hickory-dns-main/crates/proto/: Cargo.toml  README.md
hickory-dns-main/crates/recursor/: README.md
hickory-dns-main/crates/resolver/: README.md
hickory-dns-main/crates/server/: README.md
hickory-dns-main/fuzz/: README.md
hickory-dns-main/util/: README.md
hickory-dns/0.25.2/: crates-20251019-1.92.0-nightly-f04e3dfc8.js  help.html  hickory_dns.json  settings.html  src-files-20251019-1.92.0-nightly-f04e3dfc8.js
hickory-dns/0.25.2/hickory_dns/: all.html  enum.ExternalStoreConfig.html  enum.ServerStoreConfig.html  enum.ZoneTypeConfig.html  index.html  sidebar-items-20251019-1.92.0-nightly-f04e3dfc8.js  struct.Config.html  struct.ServerZoneConfig.html  struct.TlsCertConfig.html  struct.ZoneConfig.html
hickory-dns/0.25.2/search.index/: 071c871d0c0e.js  1f7d3a75f5fe.js  4a0aa1b170ce.js  4ab222a09c06.js  6186a5121597.js  688a585e662a.js  76c405346287.js  77f70c69d66f.js  root-20251019-1.92.0-nightly-f04e3dfc8.js
http3-reverse-proxy-server-experiment-master/: README.md  cert.crt  go.mod  go.sum  key.pem  main.go
http3-reverse-proxy-server-experiment-master/resolver/: resolver1_test.go  resolver2_test.go  resolver3_test.go
openspec/: AGENTS.md
reqwest-master/reqwest-master/: CHANGELOG.md  README.md
reqwest-master/reqwest-master/src/: lib.rs
reqwest-master/reqwest-master/tests/: redirect.rs
reqwest/0.12.24/: crates-20251012-1.92.0-nightly-2300c2aef.js  help.html  reqwest.json  settings.html  src-files-20251012-1.92.0-nightly-2300c2aef.js
reqwest/0.12.24/reqwest/: all.html  fn.get.html  index.html  sidebar-items-20251012-1.92.0-nightly-2300c2aef.js  struct.Body.html  struct.Client.html  struct.ClientBuilder.html  struct.Error.html  struct.Method.html  struct.NoProxy.html  struct.Proxy.html  struct.Request.html  struct.RequestBuilder.html  struct.Response.html  struct.StatusCode.html  struct.Upgraded.html  struct.Url.html  struct.Version.html  trait.IntoUrl.html  trait.ResponseBuilderExt.html  trait.UnixSocketProvider.html  type.Result.html
reqwest/0.12.24/reqwest/cookie/: index.html  (+4 more)
reqwest/0.12.24/search.index/: 018479b545a8.js  0251b0f9924b.js  030896b09de1.js  052369eac6d3.js  053dd9188a9a.js  05645a1e5ffa.js  073adbb8cab0.js  074a1895be2d.js  07607338a629.js  0936da252bf3.js  09585d2bcb95.js  0b94d166a9ab.js  0c2eee87779e.js  0df891ba175b.js  10ecfb7f8f5a.js  112bd199bcdd.js  1201a5ba841a.js  12057872e158.js  12e053714bea.js  13dc72cfbfc0.js  1459b7bd30d8.js  15c1e8444ca9.js  16ddfb4d4aa5.js  1772836b4744.js  180595f9be06.js  1818bf986c7e.js  1998e34de57e.js  1b74def350e3.js  1b9cc04cbbc9.js  1c24845b05af.js  1cf94df12c41.js  1e0b812a1856.js  1f2180b799eb.js  1fd96d36cd71.js  216309a0f79f.js  21b97a03096f.js  237d76922eb6.js  24210b845de2.js  25d040dd31aa.js  25f031d72009.js  (+86 more)
reqwest/0.12.24/wasm32-unknown-unknown/: crates-20251012-1.92.0-nightly-2300c2aef.js  help.html  reqwest.json  settings.html  (+1 more)
rust-docs/h3-latest/: README-local.md  h3.json
src/: doh_docs_test.rs  h3_direct_test.rs  http3_test.rs  main.rs  main_backup.rs  main_complex.rs  main_comprehensive_h3.rs  main_fixed.rs  main_h3_only.rs  main_h3_test.rs  main_new.rs  main_simple.rs  quinn_test.rs  test_new.rs  test_test.rs
(+787 files in other folders)
