[package]
name = "golang-http3-cloudflare-test-tool"
version = "0.1.0"
edition = "2021"
authors = ["masx200"]
description = "A Rust tool for testing Cloudflare HTTP/3 connectivity with DNS over HTTPS support"
license = "MIT"

[dependencies]
# HTTP 客户端 - 使用本地 reqwest 库 (包含 HTTP3, rustls, json 特性)
reqwest = { path = "./reqwest-master/reqwest-master", features = ["json", "rustls-tls", "http3", "gzip", "brotli"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"

# 正则表达式 (用于解析复杂的 DNS 字符串)
regex = "1"

# Hickory-DNS - 使用本地 hickory-dns 库替代 trust-dns
hickory-resolver = { path = "./hickory-dns-main/crates/resolver", features = ["tokio"] }
hickory-client = { path = "./hickory-dns-main/crates/client" }

# HTTP URI 解析库，用于解析 DoH URL
http = "1.1"

# 随机数生成，用于 DNS 查询 ID
rand = "0.9"

# 其他 Hickory-DNS 相关依赖
hickory-proto = { path = "./hickory-dns-main/crates/proto" }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
webpki-roots = "1"
ring = "0.17"

# 异步工具
futures = "0.3"

[patch.crates-io]
# 如果需要覆盖某些依赖版本，可以在这里添加
# reqwest = { path = "./reqwest-master/reqwest-master" }